# patrol-robot-monitoring-system

./: .gitignore  CHANGELOG.txt  Dockerfile  README.md  alembic.ini  docker-compose.yml  init_db.sh  init_db.sql  output.xml  requirements.txt  settings.ini  sql_app.db  temp.py  test.py
ELK/: docker-compose.yml
alembic/: env.py
app/: __init__.py  config.py  main.py  settings.py  test.py
conf.d/: default.conf
docs/: README.md  README_CN.md  ROS_LAN_communication_implementation.md  ROS_LAN_communication_implementation_CN.md
install/: .rosinstall  _setup_util.py  local_setup.sh  setup.sh
share/: PatrolControl.srv  PatrolPicture.srv  camera_control_cli.py  firmware_update_cli.py  patrol_control_cli.py  take_picture_cli.py  test_listen.py  test_pos_cli.py  test_speak.py  test_stop_cli.py  vel_test_cli.py  video_srv.py
share/install/share/zj_robot/: package.xml
share/install/share/zj_robot/action/: motion_control.action
share/install/share/zj_robot/cmake/: zj_robot-msg-extras.cmake  zj_robot-msg-paths.cmake  zj_robotConfig.cmake
share/install/share/zj_robot/msg/: motion_controlActionFeedback.msg  motion_controlFeedback.msg
share/install/share/zj_robot/srv/: gimbalcontrol.srv
sql_app/: crud.py  database.py  main.py  models.py  schemas.py
temp/: test_sensor_data.py
tests/: conftest.py  start.sh  test_patrol_pic_cli.py  test_position_control_cli.py  test_position_control_server.py  test_sensor_data.py  test_sensors.py  test_stop_control_cli.py  test_stop_control_server.py  test_take_pic_cli.py  test_take_pic_server.py  test_velocity_control_cli.py  (+2 more)
(+659 files in other folders)
