<?xml version="1.0"?>
<package format="2">
  <name>zj_robot</name>
  <version>1.0.0</version>
  <description>zj robot software</description>
  <maintainer email="844059917@qq.com">ChuChu</maintainer>
  <license>Apache 2.0</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <!-- <depend>message_generation</depend> -->
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <!-- <depend>common</depend> -->
  <build_depend>common</build_depend>
  <exec_depend>common</exec_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <!-- 
  exce_depend 以前对应的是 run_depend 现在非法
  -->


</package>

